fix:auth logic doing post request to the user service
